--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:esp-wrover-kit]
 platform = espressif32
-board = esp32dev
+board = esp-wrover-kit
 framework = arduino
+board_build.partitions = huge_app.csv
 lib_deps = 
 	phoenix1747/MQ135@^1.0.0
 	adafruit/Adafruit BusIO@^1.8.1
