Low power bluetooth

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,3 +21,4 @@ lib_deps =
 	Adafruit LED Backpack Library
 	bblanchon/ArduinoJson@^6.21.0
 	knolleary/PubSubClient@^2.8
+	h2zero/NimBLE-Arduino@^1.4.1
