--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,10 @@ platform = espressif32
 board = esp-wrover-kit
 framework = arduino
 board_build.partitions = huge_app.csv
+monitor_speed = 115200
 lib_deps = 
+	https://github.com/me-no-dev/ESPAsyncWebServer.git
+    ayushsharma82/AsyncElegantOTA @ ^2.2.5
 	phoenix1747/MQ135@^1.0.0
 	adafruit/Adafruit BusIO@^1.8.1
 	adafruit/Adafruit GFX Library@^1.10.6
